--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -100,7 +100,7 @@ section {
       transform: scale(1.1);
     }
   }
-  .logo {
+  .icon {
     width: 100%;
     height: 100%;
   }
